# in-cloudy

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini
.github/workflows/: ci-cd.yml
migration/: env.py
migration/versions/: 2025_11_19_1254-5ff7de97baea_init_schema.py
src/: main.py
src/cache/: __init__.py  client.py  config.py  deps.py  models.py  router.py  service.py
src/chess/: __init__.py  config.py  models.py  repositories.py  router.py  schema.py  services.py
src/chess_users/: config.py  models.py  schema.py
src/core/: __init__.py  router.py
src/core/router/: health.py
src/database/: base.py  base_mixins.py  base_repository.py  base_schema.py  config.py  connect.py  context.py  utils.py
src/external_api/: __init__.py  config.py  router.py  service.py
src/external_api/models/: __init__.py
src/external_api/models/api/: __init__.py  value.py
src/storage/: __init__.py  config.py  routes.py  service.py
src/telemetry/: __init__.py  config.py  logging.py  sentry.py
tests/: conftest.py  test_common_routes.py
