[project]
name = "in-cloudy"
version = "0.1.0"
description = ""
authors = [
    {name = "Dugd",email = "dugd.nitkin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.118.0,<0.119.0)",
    "uvicorn (>=0.37.0,<0.38.0)"
]

[tool.poetry]
package-mode = false
packages = [{include = "in_cloudy", from = "src"}]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
