[project]
name = "in-cloudy"
version = "0.1.0"
description = ""
authors = [
    {name = "Dugd",email = "dugd.nitkin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.118.0,<0.119.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "azure-storage-blob (>=12.26.0,<13.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "nest-asyncio (>=1.6.0,<2.0.0)"
]

[tool.poetry]
package-mode = false
packages = [{include = "in_cloudy", from = "src"}]



[tool.poetry.group.dev.dependencies]
ruff = "^0.14.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
indent-width = 4
line-length = 88

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "W",
    "B",
]
ignore = ["E501"]
unfixable = ["B"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools,migration,artifacts}/*" = ["E402"]